reduce jdk size